# TDT4230-Project

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
misc/: cornell.scene  cornell_cup.scene  cornell_diamond.scene  cornell_diamond_cube.scene  cornell_diamond_octahedron.scene  cornell_germanium.scene  cornell_germanium_cube.scene  cornell_germanium_supertorus.scene  cornell_large_germanium_sphere.scene  cornell_teapot.scene  cornell_w_hidden_light.scene  cornell_w_reflective_cube_refractive_germanium_sphere.scene  cornell_w_reflective_cube_refractive_sphere.scene  cornell_w_reflective_sphere.scene  cornellass.scene  obj_to_scene.odin  triangle.scene
src/: compute_shader.comp  main.cpp
